# hessian.js

./: .autod.conf.js  .eslintignore  .eslintrc  .gitignore  .jshintignore  .jshintrc  .npmignore  .travis.yml  AUTHORS  CHANGELOG.md  History.md  LICENSE  Makefile  README.md  index.js  package.json
.github/workflows/: build-on-linux.yml  codeql.yml  nodejs.yml
benchmark/: README.md  buf.txt  cache.js  decode.js  decode_compile.js  decode_more.js  decoder.v1.read.js  encode.js  encoder.v1.write.js  encoder.v2.write.js  encoder.v2.writeString.js  reg.js  require.js  string.js  write_double.js
lib/: bytev2.js  custom_handler.js  debug.js  decoder.js  decoder_v1.js  encoder.js  encoder_v1.js  is_type_of.js  java.js  object.js  utils.js
lib/convert/: index.js  java.util.locale.js
lib/v1/: decoder.js  encoder.js
lib/v2/: decoder.js  encoder.js
lib/v2_optimize/: decoder.js  (+1 more)
lib/v2rust/: Cargo.toml  decoder.js
lib/v2rust/harness/: index.darwin-arm64.node  index.darwin-x64.node  index.js
lib/v2rust/src/: lib.rs  test.rs
lib/v2rust/src/hessian/: io.rs  mod.rs  parse.rs  types.rs
test/: array.test.js  binary.test.js  boolean.test.js  call-reply.test.js  convert.test.js  custom_handler.test.js  date.test.js  decode.circular.test.js  double.test.js  exception.test.js  inner_class.test.js  int.test.js  list.test.js  long.test.js  map.test.js  null.test.js  object.test.js  ref.test.js  short_binary.test.js  special_cases.test.js  string.test.js  utils.js  utils.test.js  v1.test.js  v2.decode.cache.test.js  v2.list.encode.test.js  v2.optimize.endecode.test.js
(+31 files in other folders)
