[package]
name = "glue-hessian"
version = "1.0.4"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
napi = "2"
napi-derive = "2"
byteorder = "0.3"

[build-dependencies]
napi-build = "1"